--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-/* The CSS code for the website. */
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +16,6 @@
 </head>
 
 <body>
-   <!-- The above code is creating a website. -->
     <div class="container">
         <div class="head">
             <section>
@@ -173,7 +170,7 @@
                             mingle
                             with other tribes and become basic traits that are passed down by their ancestors.
                         </p>
-                        <p>read more</p>    
+                        <p>read more</p>
                     </div>
                     <div class="block-left">
                         <img src="./image/01.jpg" alt="">
@@ -195,12 +192,12 @@
                         <div class="block-two">
                             <div class="foot-left">
                                 <h1>Let's go on vacation, Make your day</h1>
-                              <div class="block-inp">
-                                <input type="text" placeholder="Email address" >
-                                <span>
-                                    <i class="fa-solid fa-angle-right"></i>
-                                </span>
-                              </div>   
+                                <div class="block-inp">
+                                    <input type="text" placeholder="Email address">
+                                    <span>
+                                        <i class="fa-solid fa-angle-right"></i>
+                                    </span>
+                                </div>
                             </div>
                             <div class="foot-right">
                                 <div class="foot-center">
@@ -215,7 +212,8 @@
                                         <p>About</p>
                                         <li><a href="#">Our Story</a></li>
                                         <li><a href="#">Benefits</a></li>
-                                        <li><a href="#">Team</a><li>
+                                        <li><a href="#">Team</a>
+                                        <li>
                                         <li><a href="#">Careers</a></li>
                                     </ul>
                                     <ul>
@@ -228,9 +226,9 @@
                         </div>
                         <div class="block-thre">
                             <div class="thre-left">
-                            <p>Terms & Conditions</p>
-                            <p>Privacy Policy</p>
-                        </div>
+                                <p>Terms & Conditions</p>
+                                <p>Privacy Policy</p>
+                            </div>
                             <div class="thre-right">
                                 <ul>
                                     <li>
